--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
             android:label="@string/title_activity_cards"
             android:screenOrientation="portrait">
         </activity>
+        <meta-data android:name="md_remove_ads" android:value="com.dbychkov.words.MechDomeAd" />
     </application>
 
 </manifest>
